--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -17,7 +17,8 @@
   background-color: white;
   ul {
     color: rgba(0, 0, 0, 0.5);
-    margin: 5rem 30px;
+    // margin: 5rem 30px;
+    margin: 5rem 0 5rem 30px;
     font-size: 20px;
     font-weight: 500;
     padding: 1rem;
