--- a/client/src/pages/QnA/QnA.scss
+++ b/client/src/pages/QnA/QnA.scss
@@ -2,6 +2,8 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  max-width: 700px;
   header {
     text-align: center;
     margin: 2rem;
